-fix z-index

--- a/resources/js/pages/common-styles.scss
+++ b/resources/js/pages/common-styles.scss
@@ -11,6 +11,7 @@
     }
 
     &_block {
+        position: relative;
         display:         flex;
         flex-direction:  column;
         justify-content: space-between;
